leetcode 1046